force-app/main/default/objects/cgcloud__Contract__c/cgcloud__Contract__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the customer contract object, used to track such type of customer agreement.</description>
    <label>Customer Contract</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Customer Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Contract</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>