force-app/main/default/objects/cgcloud__Contract__c/fields/cgcloud__Account_Contract_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Contract_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the contract template.</description>
    <label>Customer Contract Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Contract_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>cgcloud__Contract_Template__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Customer_Contract_Template</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Contract_Template__c</referenceTo>
    <relationshipLabel>Customer Contract</relationshipLabel>
    <relationshipName>Contract_Contract_Template</relationshipName>
    <type>Lookup</type>
</CustomField>