force-app/main/default/objects/cgcloud__Contract__c/fields/cgcloud__Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Commit_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date the contract was committed</description>
    <label>Commit Date</label>
    <type>Date</type>
</CustomField>