force-app/main/default/objects/cgcloud__Contract__c/fields/cgcloud__Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Initiation_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>This dates specifies the date of the entry of the claim</description>
    <label>Initiation Date</label>
    <type>Date</type>
</CustomField>