force-app/main/default/objects/cgcloud__Contract__c/fields/cgcloud__Note__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Note__c</fullName>
    <description>General notes about the contract</description>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>