force-app/main/default/objects/cgcloud__Contract__c/fields/cgcloud__Responsible__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User responsible for the customer contract.</description>
    <label>Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract</relationshipName>
    <type>Lookup</type>
</CustomField>