force-app/main/default/objects/cgcloud__Contract__c/fields/cgcloud__Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Submitted_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Describes whether the contract is submitted for approval.
Used by the mobility system (Sync. Purposes)</description>
    <label>Submitted for Approval</label>
    <type>Checkbox</type>
</CustomField>