force-app/main/default/objects/cgcloud__Contract__c/fields/cgcloud__Tactics_Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactics_Date_From__c</fullName>
    <description>This field is neccesary to validate that the dates of tactics are in the correct range</description>
    <label>Tactics Date From</label>
    <summarizedField>cgcloud__Contract_Tactic__c.cgcloud__Valid_From__c</summarizedField>
    <summaryForeignKey>cgcloud__Contract_Tactic__c.cgcloud__Contract__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>