force-app/main/default/objects/cgcloud__Contract__c/fields/cgcloud__Tactics_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactics_Date_Thru__c</fullName>
    <label>Tactics Date Thru</label>
    <summarizedField>cgcloud__Contract_Tactic__c.cgcloud__Valid_Thru__c</summarizedField>
    <summaryForeignKey>cgcloud__Contract_Tactic__c.cgcloud__Contract__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>