force-app/main/default/objects/cgcloud__Contract__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <defaultValue>DATE(2999,12,31)</defaultValue>
    <description>Last date of validity period of the customer contract</description>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>