force-app/main/default/objects/cgcloud__Contract__c/fields/cgcloud__Workflow__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Workflow__c</fullName>
    <formula>cgcloud__Account_Contract_Template__r.cgcloud__Workflow__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow</label>
    <type>Text</type>
</CustomField>