force-app/main/default/objects/cgcloud__Contract__c/recordTypes/cgcloud__Customer_Contract_Editable.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Customer_Contract_Editable</fullName>
    <active>true</active>
    <description>Selection of the record type of the customer contract in an Editable Phase</description>
    <label>Customer Contract Editable</label>
</RecordType>