force-app/main/default/objects/cgcloud__Contract__c/recordTypes/cgcloud__Customer_Contract_Readonly.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Customer_Contract_Readonly</fullName>
    <active>true</active>
    <description>Selection of the record type of the customer contract as Readonly</description>
    <label>Customer Contract Readonly</label>
</RecordType>