force-app/main/default/objects/cgcloud__Contract__c/validationRules/cgcloud__Avoid_Description_and_Name_Modification.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_Description_and_Name_Modification</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &apos;Customer_Contract_Readonly&apos; &amp;&amp; (ISCHANGED(Name) || ISCHANGED (cgcloud__Description_Language_1__c))</errorConditionFormula>
    <errorMessage>Notes can be editable in this Phase.</errorMessage>
</ValidationRule>