force-app/main/default/objects/cgcloud__Contract__c/validationRules/cgcloud__Check_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_dates</fullName>
    <active>true</active>
    <description>Valid From can&apos;t be later than Valid Thru.</description>
    <errorConditionFormula>cgcloud__Valid_From__c &gt; cgcloud__Valid_Thru__c</errorConditionFormula>
    <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
</ValidationRule>