force-app/main/default/objects/cgcloud__Contract__c/validationRules/cgcloud__Check_dates_contract_and_contract_tactic.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_dates_contract_and_contract_tactic</fullName>
    <active>true</active>
    <errorConditionFormula>OR( cgcloud__Tactics_Date_Thru__c &gt;  cgcloud__Valid_Thru__c ,  cgcloud__Tactics_Date_From__c &lt;  cgcloud__Valid_From__c )</errorConditionFormula>
    <errorMessage>The Contract Tactics time frame must be within the Customer Contract time frame.</errorMessage>
</ValidationRule>