force-app/main/default/objects/cgcloud__Contract__c/validationRules/cgcloud__Check_if_name_is_unique.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_if_name_is_unique</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
Name = VLOOKUP 
($ObjectType.cgcloud__Contract__c.Fields.Name , $ObjectType.cgcloud__Contract__c.Fields.Name, Name ), 

not( 
Id=VLOOKUP 
($ObjectType.cgcloud__Contract__c.Fields.Id , $ObjectType.cgcloud__Contract__c.Fields.Name, Name )))</errorConditionFormula>
    <errorMessage>Customer Contract Name already exists, please enter different Name.</errorMessage>
</ValidationRule>