force-app/main/default/objects/cgcloud__Contract__c/validationRules/cgcloud__Contract_Template_Not_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Contract_Template_Not_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(cgcloud__Account_Contract_Template__c)</errorConditionFormula>
    <errorMessage>The Customer Contract Template can&apos;t be edited after Customer Contract creation.</errorMessage>
</ValidationRule>