force-app/main/default/objects/cgcloud__Contract__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Phase__c</columns>
    <columns>cgcloud__Account_Contract_Template__c</columns>
    <columns>cgcloud__Account__c</columns>
    <columns>cgcloud__Responsible__c</columns>
    <columns>cgcloud__Valid_From__c</columns>
    <columns>cgcloud__Valid_Thru__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>